--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "marked": "^15.0.12",
     "node-fetch": "^3.3.2",
     "turndown": "^7.2.0",
+    "vitepress": "^1.6.3",
     "zod": "^3.25.56"
   },
   "devDependencies": {
